<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo_instagram"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fundo_caixa_texto"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/digite_o_seu_usu_rio"
            android:id="@+id/editText"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:inputType="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fundo_caixa_texto"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="@string/digite_a_sua_senha"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_below="@+id/editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="158dp"
            android:layout_marginLeft="158dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/fundo_botao"
            android:text="@string/botao_logar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="119dp"
            android:layout_marginLeft="119dp"
            android:layout_marginTop="6dp"
            android:text="@string/crie_conta" />


    </RelativeLayout>


</RelativeLayout>